--- a/chatbot.html
+++ b/chatbot.html
@@ -7,14 +7,14 @@
     <link rel="stylesheet" href="chatbot.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <title>
-        Eliza
+        Sydnie's chat bot
     </title>
 </head>
 <body>
     <div class="container">
         <div class="row">
             <div class="col-xs-18 col-md-12">
-                <h1 align="center">Eliza</h1>
+                <h1 align="center">Chat Bot</h1>
             </div>
         </div>
         <div class="row">
@@ -25,20 +25,13 @@
             </div>
             <div class="col-xs-12 col-md-8">
               <div id="question-area" data-spy="affix" data-offset-top="60">
-                <input type="text" id="input" value=""><button type="button" id="talkButton" class="btn-talk">Speak</button>
+                <input type="text" id="input" value=""><button type="button" id="talkButton" class="btn-talk" onClick="talkButton(input)">Speak</button>
               </div>
                 <div id="chat-area">
+                  </div>
                 </div>
             </div>
-            <div class="col-xs-3 col-md-2">
-                <div id="right-sidebar">
-                  Some questions you might ask:
-                  <ul>
-                    <li>how old are you?</li>
-                    <li>what is your name?</li>
-                    <li>what time is it?</li>
-                  </ul>
-                </div>
+
             </div>
         </div>
     </div>
